Set solved to false after validation Hide overflow Use glob to get dataset, rather than random numbers

--- a/captcha_dialog.css
+++ b/captcha_dialog.css
@@ -45,3 +45,6 @@
 ._image:active {
   filter: brightness(80%);
 }
+body {
+  overflow-y: hidden;
+}
